updated page title

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="script" href="script.js">
-    <title>Arithmetic Artisan</title>
+    <title>Arithmagician</title>
 </head>
 <body>
     <h1>Arithmetic Artisan</h1>
