whoops, put code back

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Arithmagician</title>
 </head>
 <body>
-    <h1>Arithmetic Artisan</h1>
+    <h1>Arithmagician</h1>
 
     <div id="options">
         <label><input type="checkbox" id="addition"> Addition</label>
