Need to fix generating question

--- a/index.html
+++ b/index.html
@@ -4,25 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <link rel="script" href="script.js">
+    <script src="script.js"></script>
     <title>Arithmagician</title>
 </head>
 <body>
     <h1>Arithmagician</h1>
 
     <div id="options">
-        <label><input type="checkbox" id="addition"> Addition</label>
-        <label><input type="checkbox" id="subtraction"> Subtraction</label>
-        <label><input type="checkbox" id="multiplication"> Multiplication</label>
-        <label><input type="checkbox" id="squares"> Squares</label>
-        <label><input type="checkbox" id="division"> Division</label>
+        <label><input type="radio" name="operation" id="addition"> Addition</label>
+        <label><input type="radio" name="operation" id="subtraction"> Subtraction</label>
+        <label><input type="radio" name="operation" id="multiplication"> Multiplication</label>
+        <label><input type="radio" name="operation" id="division"> Division</label>
+        <label><input type="radio" name="operation" id="squares"> Squares</label>
+        <label><input type="radio" name="operation" id="squareRoots"> Square Roots</label>
         <label><input type="checkbox" id="includeNegatives"> Include Negatives</label>
     </div>
 
     <button onclick="engageQuiz()">Engage</button>
+    <button onclick="checkAnswer()">Check Answer</button>
+    <button onclick="proceedToNextQuestion()">Next Question</button>
 
-    <div id="quiz">
+    <div id="question-containter">
         <!-- Dynamic content will be placed here -->
     </div>
 </body>
-</html>
