Accounted for negative numbers; added answer input field

--- a/index.html
+++ b/index.html
@@ -27,4 +27,7 @@
     <div id="question-containter">
         <!-- Dynamic content will be placed here -->
     </div>
+    <div id="answer-container">
+        <!-- Dynamic content will be placed here -->
+    </div>
 </body>
