Functional but bugs with sqrt and division; might want to adjust negatives feature

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <button onclick="engageQuiz()">Engage</button>
     <button onclick="checkAnswer()">Check Answer</button>
 
-    <div id="question-containter">
+    <div id="question-container">
         <!-- Dynamic content will be placed here -->
     </div>
     <div id="answer-container">
