using checkboxes instead of radio buttons; all operands have equal probability; currently 50 questions generated

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <h1>Arithmagician</h1>
     
     <div id="options">
-        <label><input type="radio" name="operation" id="addition"> Addition</label>
-        <label><input type="radio" name="operation" id="subtraction"> Subtraction</label>
-        <label><input type="radio" name="operation" id="multiplication"> Multiplication</label>
-        <label><input type="radio" name="operation" id="division"> Division</label>
-        <label><input type="radio" name="operation" id="squares"> Squares</label>
-        <label><input type="radio" name="operation" id="squareRoots"> Square Roots</label>
+        <label><input type="checkbox" name="operation" id="addition"> Addition</label>
+        <label><input type="checkbox" name="operation" id="subtraction"> Subtraction</label>
+        <label><input type="checkbox" name="operation" id="multiplication"> Multiplication</label>
+        <label><input type="checkbox" name="operation" id="division"> Division</label>
+        <label><input type="checkbox" name="operation" id="squares"> Squares</label>
+        <label><input type="checkbox" name="operation" id="squareRoots"> Square Roots</label>
         <label><input type="checkbox" id="includeNegatives"> Include Negatives</label>
     </div>
 
