User-selected number of questions working

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <label><input type="checkbox" name="operation" id="squares"> Squares</label>
         <label><input type="checkbox" name="operation" id="squareRoots"> Square Roots</label>
         <label><input type="checkbox" id="includeNegatives"> Include Negatives</label>
+        <label>Number of Questions: <input type="number" id="questionCount" value="50"></label>
     </div>
 
     <button onclick="engageQuiz()">Generate Question</button>
@@ -34,3 +35,4 @@
 
     <canvas id="my-canvas"></canvas>
 </body>
+</html>
