--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <label>Number of Questions: <input type="number" id="questionCount" value="50"></label>
     </div>
 
-    <button onclick="engageQuiz()">Generate Question</button>
+    <button onclick="engageQuiz()">Generate Question(s)</button>
     <button onclick="checkAnswer()">Check Answer</button>
 
     <div id="question-container">
